--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 
 <body>
 
-<!-- Navbar -->
+<!-- Header -->
 <div class="w3-top">
     <h1>Movie Fun<h2>
 </div>
@@ -35,6 +35,23 @@
         <i class="fa fa-remove"></i>
     </a>
     <h4>Search</h4>
+
+
+
+    <div class="messagepop pop">
+      <form method="post" id="new_message" action="/messages">
+        <p><label for="email">Your email or name</label><input type="text" size="30" name="email" id="email" /></p>
+        <p><label for="body">Message</label><textarea rows="6" name="body" id="body" cols="35"></textarea></p>
+        <p><input type="submit" value="Send Message" name="commit" id="message_submit"/> or <a class="close" href="/">Cancel</a></p>
+      </form>
+    </div>
+
+    <a href="/contact" id="contact">Contact Us</a>
+
+
+
+
+    
     <div class="filterbox">
         <label>Location</label>
         <div class="form-group">
