server version link

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,16 +3,15 @@
 <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <!--<link rel="stylesheet" href="/static/css/styles.css"> -->
+    <link rel="stylesheet" href="/static/css/styles.css">
 
-    <!--<link rel="stylesheet" href="https://resources/demos/style.css">-->
-     <link rel="stylesheet" href="../moviefun/static/css/styles.css">
+    <!-- <link rel="stylesheet" href="../moviefun/static/css/styles.css">-->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <!--<script src="/static/js/controller.js"></script>-->
-    <!--<script src="/static/js/script.js"></script>-->
-    <script src="../moviefun/static/js/controller.js"></script>
-    <script src="../moviefun/static/js/script.js"></script>
+    <script src="/static/js/controller.js"></script>
+    <script src="/static/js/script.js"></script>
+    <!--<script src="../moviefun/static/js/controller.js"></script>
+    <script src="../moviefun/static/js/script.js"></script>-->
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Optional theme -->
@@ -102,16 +101,16 @@
         <!--<ul ng-controller='ListCtrl' class="list-group">
             <li ng-repeat="movie in test" class="list-group-item" style="padding:7px; width:95%">{{movie}}</li>
         </ul>-->
-        <li id = "l0" class="list-group-item" style="padding:7px; width:95%"></li>
-        <li id = "l1" class="list-group-item" style="padding:7px; width:95%"></li>
-        <li id = "l2" class="list-group-item" style="padding:7px; width:95%"></li>
-        <li id = "l3" class="list-group-item" style="padding:7px; width:95%"></li>
-        <li id = "l4" class="list-group-item" style="padding:7px; width:95%"></li>
-        <li id = "l5" class="list-group-item" style="padding:7px; width:95%"></li>
-        <li id = "l6" class="list-group-item" style="padding:7px; width:95%"></li>
-        <li id = "l7" class="list-group-item" style="padding:7px; width:95%"></li>
-        <li id = "l8" class="list-group-item" style="padding:7px; width:95%"></li>
-        <li id = "l9" class="list-group-item" style="padding:7px; width:95%"></li>
+        <a id = "l0" class="list-group-item" style="padding:7px; width:95%"></a>
+        <a id = "l1" class="list-group-item" style="padding:7px; width:95%"></a>
+        <a id = "l2" class="list-group-item" style="padding:7px; width:95%"></a>
+        <a id = "l3" class="list-group-item" style="padding:7px; width:95%"></a>
+        <a id = "l4" class="list-group-item" style="padding:7px; width:95%"></a>
+        <a id = "l5" class="list-group-item" style="padding:7px; width:95%"></a>
+        <a id = "l6" class="list-group-item" style="padding:7px; width:95%"></a>
+        <a id = "l7" class="list-group-item" style="padding:7px; width:95%"></a>
+        <a id = "l8" class="list-group-item" style="padding:7px; width:95%"></a>
+        <a id = "l9" class="list-group-item" style="padding:7px; width:95%"></a>
 
     </div>
 
