--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,7 @@
                 <span class="caret"></span>
             </button>
             <ul class="dropdown-menu " aria-labelledby="dLabel">
-                <form method="post" id="genre">
+                <ul method="post" id="genre">
                     <div><input type="checkbox" name="genre" value="Action" />Action</div>
                     <div><input type="checkbox" name="genre" value="Adventure" />Adventure</div>
                     <div><input type="checkbox" name="genre" value="Crime" />Crime</div>
@@ -85,7 +85,7 @@
                     <div><input type="checkbox" name="genre" value="Musical" />Musical</div>
                     <div><input type="checkbox" name="genre" value="Romance" />Romance</div>
                     <div><input type="checkbox" name="genre" value="Western" />Western</div>
-                </form>
+                </ul>
             </ul>
         </div>
 
